added login/repaired registration
added login/repaired registration

--- a/index/signin.html
+++ b/index/signin.html
@@ -11,7 +11,7 @@
   <meta name ="description" content="opis zawartosci strony">
   <meta name="author" content="dane autora">
 
-  <link href="style_signup.css" rel="stylesheet" type="text/css">
+  <link href="style_signin.css" rel="stylesheet" type="text/css">
 
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -34,11 +34,7 @@
 
       <img src="star.png"></img><br>
 
-      <p>Sign up</p>
-
-      <label for="username">Username:</label><br>
-      <input type="text" id="username" name="username"><br>
-
+      <p>Sign in</p>
 
       <label for="email">E-mail:</label><br>
       <input type="text" id="email" name="email"><br>
@@ -47,21 +43,11 @@
       <label for="password">Password:</label><br>
       <input type="password" id="password" name="password" placeholder="6+ characters"><br>
 
-
-      <label for="rpassword">Repeat password:</label><br>
-      <input type="password" id="rpassword" name="rpassword"><br>
-
-
-      <input type="checkbox" id="privacy" name="privacy">
-      <label for="privacy">By signing up you accept the Term of<br> service and 
-
-        Privacy Policy</label><br>
-
-      <button class="button">Sign up</button><br>
+      <button class="button">Sign in</button><br>
 
       <small>• Message</nr></small><br>
       
-      <p id="acc">Already have an account? &nbsp <span> Sign in</span></p>
+      <p id="acc">Don't have an account? &nbsp <span> Sign up</span></p>
 
     </form>
 
@@ -74,7 +60,7 @@
 </div>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="scripts_signup.js" type="module"></script>
+<script src="scripts_signin.js" type="module"></script>
 
 </body>
 
