poprawilem logowanie/rejestracje
poprawilem logowanie/rejestracje

--- a/index/loggedin.html
+++ b/index/loggedin.html
@@ -4,14 +4,14 @@
 
 <head>
 
-<title>Title</title>
+<title>Logged in</title>
 
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta http-equiv="content-language" content="pl">
   <meta name ="description" content="opis zawartosci strony">
   <meta name="author" content="dane autora">
 
-  <link href="style_signin.css" rel="stylesheet" type="text/css">
+  <link href="style_loggedin.css" rel="stylesheet" type="text/css">
 
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -34,20 +34,10 @@
 
       <img src="star.png"></img><br>
 
-      <p>Sign in</p>
-
-      <label for="email">E-mail:</label><br>
-      <input type="text" id="email" name="email"><br>
-
-
-      <label for="password">Password:</label><br>
-      <input type="password" id="password" name="password" placeholder="6+ characters"><br>
-
-      <button class="button">Sign in</button><br>
-
-      <small id="msg"></nr></small><br>
+      <p>Successfully registered.</br>
+         You can now sign in</p>      
       
-      <p id="acc">Don't have an account? &nbsp <span>  <a href="signup.html">Sign up</a></span></p>
+      <p id="acc">Click here to &nbsp <span> <a href="signin.html">sign in</a></span></p>
 
     </form>
 
@@ -60,7 +50,7 @@
 </div>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="scripts_signin.js" type="module"></script>
+<script src="scripts_signup.js" type="module"></script>
 
 </body>
 
