--- a/index/signup.html
+++ b/index/signup.html
@@ -51,17 +51,11 @@
       <label for="rpassword">Repeat password:</label><br>
       <input type="password" id="rpassword" name="rpassword"><br>
 
-
-      <input type="checkbox" id="privacy" name="privacy">
-      <label for="privacy">By signing up you accept the Term of<br> service and 
-
-        Privacy Policy</label><br>
-
       <button class="button">Sign up</button><br>
 
-      <small>• Message</nr></small><br>
+      <small id="msg"></nr></small><br>
       
-      <p id="acc">Already have an account? &nbsp <span> Sign in</span></p>
+      <p id="acc">Already have an account? &nbsp <span> <a href="signin.html">Sign in</a></span></p>
 
     </form>
 
