--- a/index/laptopy.html
+++ b/index/laptopy.html
@@ -27,7 +27,7 @@
   <div class="leftholder">
     <div class="sidenav">
 
-      <a href="#">Strona Główna</a>
+      <a href="home.html">Strona Główna</a>
       <button class="dropdown-btn">Sprzęt
         <i class="fa fa-caret-down"></i>
       </button>
