--- a/index/home.html
+++ b/index/home.html
@@ -11,7 +11,7 @@
   <meta name ="description" content="opis zawartosci strony">
   <meta name="author" content="dane autora">
 
-  <link href="style_laptopy.css" rel="stylesheet" type="text/css">
+  <link href="style_home.css" rel="stylesheet" type="text/css">
 
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -33,18 +33,17 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-        <a href="laptopy.html">Dodaj</a>
-        <a href="Users.html">Wyświetl</a>
+        <a href="add.html">Dodaj</a>
+        <a href="wyswietl.html">Wyświetl</a>
         <a href="#">Usuń</a>
       </div>
-      <a href="#services">Użytkownicy</a>
-      <a href="#clients">Test</a>
-      <a href="#contact">Test</a>
+      <a href="users_wyswietl.html">Użytkownicy</a>
+      <a href="https://github.com/mucha250/projekt_it" target="_blank">Github</a>
+      <a href="signin.html">Wyloguj</a>
       
     </div>
   </div>
   <div class="rightholder">
-<img src="star.png"></img><br>
     <h2>Obrany Cel</h2>
     <h3>Aplikacja ma na celu ułatwienie pracy dla pracowników działu IT. Administratorzy aplikacji będą mogli zarządzać między innymi sprzętem, licencjami czy peryferiami w organizacji.</h3>
     <h2>Funkcjonalności</h2>
@@ -61,7 +60,12 @@
   </div>
 </div>
 
-  <div class="down"></div>
+  <div class="down">
+    <img src="star.png"></img>
+
+
+
+  </div>
 
 </div>
 
