--- a/index/home.html
+++ b/index/home.html
@@ -35,7 +35,7 @@
       <div class="dropdown-container">
         <a href="add.html">Dodaj</a>
         <a href="wyswietl.html">Wyświetl</a>
-        <a href="#">Usuń</a>
+        <a href="usun_menu.html">Usuń</a>
       </div>
       <a href="users_wyswietl.html">Użytkownicy</a>
       <a href="https://github.com/mucha250/projekt_it" target="_blank">Github</a>
