--- a/index/usun_menu.html
+++ b/index/usun_menu.html
@@ -11,7 +11,7 @@
   <meta name ="description" content="opis zawartosci strony">
   <meta name="author" content="dane autora">
 
-  <link href="style_add.css" rel="stylesheet" type="text/css">
+  <link href="usun_menu_add.css" rel="stylesheet" type="text/css">
 
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,20 +28,20 @@
 
   <div class="holder">
 
-    <p>Jaki sprzęt chcesz dodać</p><br>
+    <p>Jaki sprzęt chcesz usunąć</p><br>
     
     <div class="button_holder"> 
 
-      <a href="aparat.html" class="button">Aparat</a>
-      <a href="drukarka.html" class="button">Drukarka</a>
-      <a href="laptop.html" class="button">Laptop</a>
-      <a href="licencja.html" class="button">Licencja</a>
-      <a href="modem.html" class="button">Modem</a>
-      <a href="monitor.html" class="button">Monitor</a>
+      <a href="usun_aparat.html" class="button">Aparat</a>
+      <a href="usun_licencje.html" class="button">Licencja</a>
+      <a href="" class="button">Laptop</a>
+      <a href="" class="button">Drukarka</a>
+      <a href="" class="button">Modem</a>
+      <a href="" class="button">Monitor</a>
       <a href="" class="button">Peryferia</a>
       <a href="" class="button">Procesory</a>
-      <a href="telefon.html" class="button">Telefon</a>
-      <a href="toner.html" class="button">Toner</a>
+      <a href="" class="button">Telefon</a>
+      <a href="" class="button">Toner</a>
 
     </div>
 
